RESOLVED FIXED216674
Per-app accent color overrides are broken
https://bugs.webkit.org/show_bug.cgi?id=216674
Summary Per-app accent color overrides are broken
Tim Horton
Reported 2020-09-17 16:44:27 PDT
Per-app accent color overrides are broken
Attachments
Patch (2.92 KB, patch)
2020-09-17 16:44 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2020-09-17 16:44:43 PDT
Tim Horton
Comment 2 2020-09-17 16:44:45 PDT
Darin Adler
Comment 3 2020-09-17 17:49:36 PDT
Comment on attachment 409086 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=409086&action=review > Source/WebCore/PAL/pal/spi/mac/NSApplicationSPI.h:39 > @property (copy, setter=_setAccentColor:) NSColor *_accentColor; Can we remove this, too?
EWS
Comment 4 2020-09-17 17:50:22 PDT
Committed r267215: <https://trac.webkit.org/changeset/267215> All reviewed patches have been landed. Closing bug and clearing flags on attachment 409086 [details].
Tim Horton
Comment 5 2020-09-17 17:58:52 PDT
(In reply to Darin Adler from comment #3) > Comment on attachment 409086 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=409086&action=review > > > Source/WebCore/PAL/pal/spi/mac/NSApplicationSPI.h:39 > > @property (copy, setter=_setAccentColor:) NSColor *_accentColor; > > Can we remove this, too? No, we can't, we still use the setter!
Note You need to log in before you can comment on or make changes to this bug.