Source/WebKit/UIProcess/mac/PageClientImplMac.mm
@@ -973,7 +973,7 @@ void PageClientImpl::requestDOMPasteAccess(const WebCore::IntRect& elementRect, 
 #if HAVE(APP_ACCENT_COLORS)
 WebCore::Color PageClientImpl::accentColor()
 {
-    return WebCore::colorFromNSColor([NSApp _accentColor]);
+    return WebCore::colorFromNSColor([NSApp _effectiveAccentColor]);
 }
 #endif
 
